--- a/gb/10/5/30/n2923005.md
+++ b/gb/10/5/30/n2923005.md
@@ -1,58 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oeojha307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oeojha307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oeojha307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oeojha307/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oeojha307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oeojha307/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oeojha307/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oeojha307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>渣油锅炉是纽约空气污染主凶</h2>
-
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2010/05/100529221421836-600x400.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元5月30日讯】（大纪元纽约讯）5月27日新发布的一份街面空气品质报告指出，纽约市冬季各处空气中的悬浮物镍浓度差异很大，建筑物的锅炉依然是主要的<ahref="https://github.com/oeojha307/djy/blob/master/gb/tag/%E7%A9%BA%E6%B0%94%E6%B1%A1%E6%9F%93.md#1">空气污染</a>来源。市健康与心理卫生局这次发布新报告，是去年12月纽约市首份冬季空气品质报告的后续。资料来自纽约市社区空气调查（NYCCAS）组织。</p>
-<p>这次的新结果佐证了NYCCAS第一份报告的结论，证明室内取暖用的残渣燃料油是纽约市有害<ahref="https://github.com/oeojha307/djy/blob/master/gb/tag/%E7%A9%BA%E6%B0%94%E6%B1%A1%E6%9F%93.md#1">空气污染</a>的一大来源。此类燃料燃烧时排放的空气颗粒物中有几种金属，镍就是其中之一。这些超细颗粒物吸入人体后，对肺有刺激作用、会导致哮喘和肺气肿恶化，并会加大心脏病和过早死亡的风险。</p>
-<p>这份报告题为“2008-2009年度环境超细颗粒物镍浓度监控报告”。据该报告估计，市区建筑密度较高的地区，镍含量也较高，其中包括曼哈顿区的许多地方和布朗士区的部分地方，那里许多大型建筑物依靠烧渣油（4号或6号）的锅炉来取暖和供应热水。渣油的镍含量较高。结果，这些地区空气悬浮物的镍含量是渣油锅炉较少地区的近四倍。同样，在居民密度高的地区，空气悬浮物的镍含量是低密度居民区的三倍。</p>
-<p>纽约市健康与心理卫生局局长法利(Thomas Farley)医生说：“纽约市空气品质的改进，关系到全体纽约市民的切身利益，特别是患有心脏病和肺病的纽约市民。数十年前，人们清楚认识到煤炭炉影响健康，于是纽约市禁用煤炭炉。现在，为了相同的理由，到了要淘汰渣油炉的时候了。”</p>
-<p>研究人员在去年发表的一份全国性调查报告中指出，城市的空气品质越差，居民的平均预期寿命越短。1980年代和1990年代在减少超细颗粒空气污染物方面成效越大的城市，这些年在健康上的获益也越大。</p>
-<p>纽约市环境保护局局长胡利威（Cas Holloway）说：“市环境保护局设有一个团队，由45名检查员组成，定期对检测点进行检查测试，确保公众健康得到保护。这份报告清楚表明，我们需要进一步减少渣油炉排放，以克服这些污染物对健康的有害影响。”</p>
-<p>该报告指出，做好锅炉维护工作，有助于减少现有锅炉的排放，但是更长期的举措应包括改造渣油锅炉或代以用天然气或2号取暖油作为燃料的设备。要进一步了解纽约市的空气品质举措，请浏览网站：www.nyc.gov。 <font color=#ffffff>(http://www.dajiyuan.com)</font></p>
+<p>【大纪元5月30日讯】（大纪元纽约讯）5月27日新发布的一份街面空气质量报告指出，纽约市冬季各处空气中的悬浮物镍浓度差异很大，建筑物的锅炉依然是主要的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A9%BA%E6%B0%94%E6%B1%A1%E6%9F%93.md#1">空气污染</a>来源。市健康与心理卫生局这次发布新报告，是去年12月纽约市首份冬季空气质量报告的后续。资料来自纽约市社区空气调查（NYCCAS）组织。
+<p>这次的新结果佐证了NYCCAS第一份报告的结论，证明室内取暖用的残渣燃料油是纽约市有害<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A9%BA%E6%B0%94%E6%B1%A1%E6%9F%93.md#1">空气污染</a>的一大来源。此类燃料燃烧时排放的空气颗粒物中有几种金属，镍就是其中之一。这些超细颗粒物吸入人体后，对肺有刺激作用、会导致哮喘和肺气肿恶化，并会加大心脏病和过早死亡的风险。
+<p>这份报告题为“2008-2009年度环境超细颗粒物镍浓度监控报告”。据该报告估计，市区建筑密度较高的地区，镍含量也较高，其中包括曼哈顿区的许多地方和布朗士区的部分地方，那里许多大型建筑物依靠烧渣油（4号或6号）的锅炉来取暖和供应热水。渣油的镍含量较高。结果，这些地区空气悬浮物的镍含量是渣油锅炉较少地区的近四倍。同样，在居民密度高的地区，空气悬浮物的镍含量是低密度居民区的三倍。
+<p>纽约市健康与心理卫生局局长法利(Thomas Farley)医生说：“纽约市空气质量的改进，关系到全体纽约市民的切身利益，特别是患有心脏病和肺病的纽约市民。数十年前，人们清楚认识到煤炭炉影响健康，于是纽约市禁用煤炭炉。现在，为了相同的理由，到了要淘汰渣油炉的时候了。”
+<p>研究人员在去年发表的一份全国性调查报告中指出，城市的空气质量越差，居民的平均预期寿命越短。1980年代和1990年代在减少超细颗粒空气污染物方面成效越大的城市，这些年在健康上的获益也越大。
+<p>纽约市环境保护局局长胡利威（Cas Holloway）说：“市环境保护局设有一个团队，由45名检查员组成，定期对检测点进行检查测试，确保公众健康得到保护。这份报告清楚表明，我们需要进一步减少渣油炉排放，以克服这些污染物对健康的有害影响。”
+<p>该报告指出，做好锅炉维护工作，有助于减少现有锅炉的排放，但是更长期的举措应包括改造渣油锅炉或代以用天然气或2号取暖油作为燃料的设备。要进一步了解纽约市的空气质量举措，请浏览网站：www.nyc.gov。 <font color=#ffffff>(http://www.dajiyuan.com)</font></p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/4/30/n2893259.md#1">美国10大臭氧污染城市 加州占8个</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/1/n2893644.md#1">汽车排烟影响九成加州居民</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/5/n2898090.md#1">停车不熄火空转 将面临罚款125元</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/6/n2898439.md#1">港立法会通过改善空气质素议案</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/6/n2898529.md#1">立法会通过改善空气质素议案</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/21/n2914927.md#1">控制国协运动会空污  印度推首个监测系统</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/24/n2917318.md#1">空气污染影响胎儿智商</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/24/n2917524.md#1">中县屯区空气污染 议员：环保局需督促</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/25/n2918326.md#1">澳纽省学校安装的无烟道暖气机有害健康</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/10/5/26/n2919663.md#1">空污防制设施好 空气品质没烦恼</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/26/n2919663.md#1">空污防制设施好 空气质量没烦恼</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/25/n2918326.md#1">澳纽省学校安装的无烟道暖气机有害健康</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/24/n2917524.md#1">中县屯区空气污染 议员：环保局需督促</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/24/n2917318.md#1">空气污染影响胎儿智商</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/21/n2914927.md#1">控制国协运动会空污  印度推首个监测系统</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/6/n2898529.md#1">立法会通过改善空气质量议案</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/6/n2898439.md#1">港立法会通过改善空气质量议案</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/5/n2898090.md#1">停车不熄火空转 将面临罚款125元</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/5/1/n2893644.md#1">汽车排烟影响九成加州居民</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/30/n2893259.md#1">美国10大臭氧污染城市 加州占8个</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/oeojha307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/29/n11829466.md#1" target="_blank">刘博：别让切尔诺贝利重演</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12288825.md#1">泰移工染疫 台政府匡189人 部分检验结果出炉</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12290545.md#1">美国从31日起恢复对55类中国商品征税</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/29/n12291106.md#1">【视频】黄历六月北京飞雪 网民：必有奇冤</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12288937.md#1">离台染疫泰移工 密切接触者28人检验结果出炉</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12289395.md#1">大陆知名财经博主：经济内循环？别乱做梦了</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/27/n12286850.md#1">潘玮柏惊喜宣布结婚 娶小13岁中国空姐</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/27/n12287645.md#1">自曝当年生子险送命 大S：靠女儿拉出鬼门关</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12289207.md#1">双方不约而同感激对方 艾成与王瞳登记结婚</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/27/n12286272.md#1">4岁儿被踩断腿 馆长落泪：如果爸爸可以帮你痛</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/27/n12287781.md#1">不敌疫情 赌王千金何超莲宣布关闭牛肉面店</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/9/12/8/n2747593.md#1">时穷节乃见  为张睢阳齿——张巡</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/15/12/5/n4589242.md#1">一碗清茶 解解解元之渴  下联怎生妙对？</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/28/n12288658.md#1">沉重的“7.20”——神韵艺术家回忆曾经的迫害</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/9/4/4/n2484963.md#1">从《清明上河图》看时代风华（下）</a></li>
-<li><a href="https://github.com/oeojha307/djy/blob/master/gb/20/7/16/n12261035.md#1">华盛顿将军系列故事：乔治·华盛顿精神</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oeojha307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oeojha307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/5/30/n2923005.htm">渣油锅炉是纽约空气污染主凶</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/5/30/n2923005.htm">渣油锅炉是纽约空气污染主凶</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oeojha307/djy/blob/master/gb/10/5/30/n2923005.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oeojha307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oeojha307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oeojha307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oeojha307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeojha307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/10/5/30/n2923005.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
